--- a/ABOUTUS.html
+++ b/ABOUTUS.html
@@ -263,7 +263,7 @@
     </div>
     <div class="pics4">
     <img src="223.jpg" width="300" height="300"  alt="滑入顯示的圖片">
-    <img src="4.jpg" width="300" height="300"  alt="原本顯示的圖片">
+    <img src="10744138.jpg" width="300" height="300"  alt="原本顯示的圖片">
     </div>  	
  	  
 
