--- a/3-2ISICOFFER.html
+++ b/3-2ISICOFFER.html
@@ -256,7 +256,7 @@ li{
       <li><a class="show" href="https://www.isic.com.tw/jsp/tw/home/ch/travel-flight.jsp"><img src="airplane.jpg" width="120" height="100" alt="isic" style="border-radius: 50%"><font size="5"><br>機票優惠</font></a>
         <p>想要出國留學或是想要當交換學生，都可以來辦這張國際學生證，可以享有許多的優惠，省下一大筆的錢喔!</p></a>
       </li>
-      <li><a class="show" href="https://www.isic.org/discounts/national-gallery-of-art/136778/"><img src="林肯.jpeg" width="120" height="100" alt="isic" style="border-radius: 50%"><font size="5"><br>National Gallery of Art</font></a>
+      <li><a class="show" href="https://www.isic.org/discounts/national-gallery-of-art/136778/"><img src="Lin.jpg" width="120" height="100" alt="isic" style="border-radius: 50%"><font size="5"><br>National Gallery of Art</font></a>
         <p>只要持有這一張學生證，去美國的國家美術館就是免費的喔</p></a>
       </li>
       <li><a class="show" href="https://www.isic.com.tw/jsp/tw/home/ch/travel-studyTour.jsp"> <img src="study.jpg" width="120" height="100" alt="isic" style="border-radius: 50%"><font size="5"><br>出國遊學囉!!</font></a>
