--- a/4-2USFORM.html
+++ b/4-2USFORM.html
@@ -229,6 +229,7 @@
 	Date of birth: <input type="text"><br>
 	school:<input type="text">
 	<input type="submit" value="送出表單">
+	<input type="button" value="送出表單" style="width:120px;height:40px;font-size:18px;">
 </form>
 </fieldset>
 </div>
