--- a/FORM.html
+++ b/FORM.html
@@ -262,6 +262,7 @@
       <input id="email" type="text" name="email" placeholder="電子郵件" /><br>
       <textarea id="message" type="text" name="text" placeholder="想告訴我們什麼?" style="height:100px"></textarea>
       <input type="submit" value="送出表單">
+		<input type="button" value="送出表單" style="width:200px;height:30px;font-size:18px;">
     </fieldset>
 
 
