--- a/FORM.html
+++ b/FORM.html
@@ -211,7 +211,7 @@
     border: 1px solid #ccc;
     border-radius: 4px
     }
-     input[type=submit] { /*按鈕*/
+     input[type=button] { /*按鈕*/
     font-family:微軟正黑體;
     width: 80%;
     font-size: 12px width:bold;
@@ -261,8 +261,7 @@
       <input id="phone" type="text" name="phone" placeholder="聯絡電話"><br></input>
       <input id="email" type="text" name="email" placeholder="電子郵件" /><br>
       <textarea id="message" type="text" name="text" placeholder="想告訴我們什麼?" style="height:100px"></textarea>
-      <input type="submit" value="送出表單">
-		<input type="button" value="送出表單" style="width:200px;height:30px;font-size:18px;">
+      <input type="button" value="送出表單" >
     </fieldset>
 
 
